--- a/blog/authors.yml
+++ b/blog/authors.yml
@@ -1,17 +1,11 @@
-endi:
-  name: Endilie Yacop Sucipto
-  title: Maintainer of Docusaurus
-  url: https://github.com/endiliey
-  image_url: https://github.com/endiliey.png
+razgriz:
+  name: Razgriz
+  title: Poiyomi Docs Author
+  url: https://github.com/rrazgriz
+  image_url: https://github.com/rrazgriz.png
 
-yangshun:
-  name: Yangshun Tay
-  title: Front End Engineer @ Facebook
-  url: https://github.com/yangshun
-  image_url: https://github.com/yangshun.png
-
-slorber:
-  name: Sébastien Lorber
-  title: Docusaurus maintainer
-  url: https://sebastienlorber.com
-  image_url: https://github.com/slorber.png
+poiyomi:
+  name: Poiyomi
+  title: Shader Developer
+  url: https://github.com/poiyomi
+  image_url: https://github.com/poiyomi.png
