--- a/package.json
+++ b/package.json
@@ -18,8 +18,10 @@
     "@docusaurus/plugin-client-redirects": "^2.0.0-rc.1",
     "@docusaurus/preset-classic": "^2.0.0-rc.1",
     "@mdx-js/react": "^1.6.22",
+    "autoprefixer": "^10.4.16",
     "clsx": "^1.2.1",
     "docusaurus": "^1.14.7",
+    "postcss": "^8.4.31",
     "prism-react-renderer": "^1.3.3",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
