Added Blog Post to Announce the release of 9.0.

--- a/blog/authors.yml
+++ b/blog/authors.yml
@@ -9,3 +9,9 @@ poiyomi:
   title: Shader Developer
   url: https://github.com/poiyomi
   image_url: https://github.com/poiyomi.png
+
+bluwizard:
+  name: BluWizard
+  title: Poiyomi Docs Contributor
+  url: https://github.com/bluwizard10
+  image_url: https://github.com/bluwizard10.png
