Added last-minute Blog Post.

--- a/blog/authors.yml
+++ b/blog/authors.yml
@@ -15,3 +15,9 @@ bluwizard:
   title: Poiyomi Docs Contributor
   url: https://github.com/bluwizard10
   image_url: https://github.com/bluwizard10.png
+
+teeh:
+  name: Teeh
+  title: Contributor
+  url: https://github.com/teehzero
+  image_url: https://github.com/teehzero.png
