--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "poiyomidocs",
-  "version": "2025.5.20",
+  "version": "2025.5.28",
   "private": true,
   "scripts": {
     "docusaurus": "docusaurus",
@@ -14,32 +14,33 @@
     "write-heading-ids": "docusaurus write-heading-ids"
   },
   "dependencies": {
-    "@docusaurus/core": "3.7.0",
-    "@docusaurus/plugin-client-redirects": "3.7.0",
-    "@docusaurus/preset-classic": "3.7.0",
-    "@docusaurus/theme-mermaid": "3.7.0",
-    "@easyops-cn/docusaurus-search-local": "0.48.3",
+    "@docusaurus/core": "3.8.0",
+    "@docusaurus/faster": "^3.8.0",
+    "@docusaurus/plugin-client-redirects": "3.8.0",
+    "@docusaurus/preset-classic": "3.8.0",
+    "@docusaurus/theme-mermaid": "3.8.0",
+    "@easyops-cn/docusaurus-search-local": "0.49.2",
     "@fortawesome/fontawesome-svg-core": "^6.7.2",
     "@fortawesome/free-brands-svg-icons": "^6.7.2",
     "@fortawesome/free-regular-svg-icons": "^6.7.2",
     "@fortawesome/free-solid-svg-icons": "^6.7.2",
     "@fortawesome/react-fontawesome": "^0.2.2",
-    "@iconify/react": "^5.2.0",
+    "@iconify/react": "^6.0.0",
     "@mdx-js/react": "^3.1.0",
-    "autoprefixer": "^10.4.20",
+    "autoprefixer": "^10.4.21",
     "clsx": "^2.1.1",
-    "postcss": "^8.4.49",
+    "postcss": "^8.5.3",
     "prism-react-renderer": "^2.4.1",
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0",
+    "react": "^19.1.0",
+    "react-dom": "^19.1.0",
     "react-player": "^2.16.0"
   },
   "devDependencies": {
-    "@docusaurus/module-type-aliases": "3.7.0",
-    "@docusaurus/types": "3.7.0"
+    "@docusaurus/module-type-aliases": "3.8.0",
+    "@docusaurus/types": "3.8.0"
   },
   "engines": {
-    "node": ">=18.0"
+    "node": ">=22.0"
   },
   "browserslist": {
     "production": [
