--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "poiyomidocs",
-  "version": "2025.9.4",
+  "version": "2025.9.28",
   "private": true,
   "scripts": {
     "docusaurus": "docusaurus",
@@ -15,17 +15,18 @@
     "dev": "docusaurus start"
   },
   "dependencies": {
-    "@docusaurus/core": "3.8.1",
-    "@docusaurus/faster": "3.8.1",
-    "@docusaurus/plugin-client-redirects": "3.8.1",
-    "@docusaurus/plugin-sitemap": "^3.8.1",
-    "@docusaurus/preset-classic": "3.8.1",
-    "@docusaurus/theme-mermaid": "3.8.1",
-    "@easyops-cn/docusaurus-search-local": "0.49.2",
-    "@fortawesome/fontawesome-svg-core": "^7.0.0",
-    "@fortawesome/free-brands-svg-icons": "^7.0.0",
-    "@fortawesome/free-regular-svg-icons": "^7.0.0",
-    "@fortawesome/free-solid-svg-icons": "^7.0.0",
+    "@docusaurus/core": "3.9.1",
+    "@docusaurus/faster": "3.9.1",
+    "@docusaurus/plugin-client-redirects": "3.9.1",
+    "@docusaurus/plugin-sitemap": "^3.9.1",
+    "@docusaurus/preset-classic": "3.9.1",
+    "@docusaurus/theme-mermaid": "3.9.1",
+    "@easyops-cn/docusaurus-search-local": "0.52.1",
+    "@fortawesome/fontawesome-svg-core": "^7.0.1",
+    "@fortawesome/fontawesome-free": "^7.0.1",
+    "@fortawesome/free-brands-svg-icons": "^7.0.1",
+    "@fortawesome/free-regular-svg-icons": "^7.0.1",
+    "@fortawesome/free-solid-svg-icons": "^7.0.1",
     "@fortawesome/react-fontawesome": "^0.2.3",
     "@iconify/react": "^6.0.0",
     "@mdx-js/react": "^3.1.0",
@@ -35,11 +36,12 @@
     "prism-react-renderer": "^2.4.1",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
-    "react-player": "^2.16.0"
+    "react-player": "3.3.3",
+    "media-chrome": "4.13.1"
   },
   "devDependencies": {
-    "@docusaurus/module-type-aliases": "3.8.1",
-    "@docusaurus/types": "3.8.1"
+    "@docusaurus/module-type-aliases": "3.9.1",
+    "@docusaurus/types": "3.9.1"
   },
   "engines": {
     "node": ">=22.0"
