--- a/package.json
+++ b/package.json
@@ -39,7 +39,9 @@
   },
   "devDependencies": {
     "@docusaurus/module-type-aliases": "3.9.1",
-    "@docusaurus/types": "3.9.1"
+    "@docusaurus/tsconfig": "3.9.1",
+    "@docusaurus/types": "3.9.1",
+    "typescript": "5.9.3"
   },
   "engines": {
     "node": ">=22.0"
