--- a/package.json
+++ b/package.json
@@ -35,7 +35,9 @@
     "prism-react-renderer": "^2.4.1",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
-    "react-player": "3.3.3"
+    "react-player": "3.3.3",
+    "rehype-katex": "7",
+    "remark-math": "6"
   },
   "devDependencies": {
     "@docusaurus/module-type-aliases": "3.9.2",
